--- a/app/styles/home.css
+++ b/app/styles/home.css
@@ -4,17 +4,43 @@
 }
 
 .sidebar {
-  float: left;
-  width: 25%;
-  background-color: #dedede;
-  padding: 35px;
-  margin-right: 35px;
-  min-height: 100%;
-}
-
+      background-color: lightgray;
+      position: fixed;
+      width: 25%;
+      top: 0px;
+      left: 0px;
+      height: 100%;
+      padding: 35px;
+      margin-right: 35px;
+  }
 .chat-room {
   padding: 35px;
   background-color: white;
   width: 100%;
   height: 100%;
+}
+
+.new-room-button {
+    float: right;
+    display: inline-block;
+    padding: 15px 25px;
+    font-size: 15px;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    outline: none;
+    color: #fff;
+    background-color: #4CAF50;
+    border: none;
+    border-radius: 15px;
+    box-shadow: 0 5px #999;
+  }
+
+  .new-room-button:hover {background-color: #3e8e41}
+
+  .new-room-button:active {
+    background-color: #3e8e41;
+    box-shadow: 0 5px #666;
+    transform: translateY(4px);
+  }
 }
