--- a/app/styles/home.css
+++ b/app/styles/home.css
@@ -4,8 +4,8 @@
 }
 
 .sidebar {
+      float: left;
       background-color: lightgray;
-      position: fixed;
       width: 25%;
       top: 0px;
       left: 0px;
@@ -13,12 +13,30 @@
       padding: 35px;
       margin-right: 35px;
   }
-.chat-room {
-  padding: 35px;
-  background-color: white;
-  width: 100%;
-  height: 100%;
-}
+
+  .chat-room {
+     padding-top: 35px;
+  }
+
+  h1.active-room-title {
+    margin-top: 0px;
+  }
+
+  .message {
+    padding: 10px;
+    border-bottom: 1px solid #dedede;
+  }
+
+  .message-username {
+    font-weight: bold;
+    padding-right: 15px;
+  }
+
+  .message-time {
+    font-size: x-small;
+    color: #979797;
+  	 }
+
 
 .new-room-button {
     float: right;
